--- a/src/routes/AppDetail.less
+++ b/src/routes/AppDetail.less
@@ -1,22 +1,33 @@
 :global {
   .app-detail-nav{
-    width: 100%;
+  }
+  .ant-card {
+    margin: 2vh 0;
   }
   .app-detail-nav .ant-tabs-nav-scroll {
-    widows: 100%;
     display: flex;
     justify-content: center;
+  }
+  .ant-upload-select-picture-card i {
+    font-size: 28px;
+    color: #999;
+  }
+
+  .ant-upload-select-picture-card .ant-upload-text {
+    margin-top: 8px;
+    font-size: 12px;
+    color: #666;
   }
 }
 
 .wrapSubmit{
-  width: 100%;
   display: flex;
   justify-content: center;
 }
 
 .form {
-  flex: 1;
+  align-content: center;
+  padding: 0 5vw;
   display: flex;
   justify-content: center;
 }
