--- a/src/routes/AppDetail.less
+++ b/src/routes/AppDetail.less
@@ -1,6 +1,16 @@
 :global {
-  .app-detail-nav{
+
+  .ant-upload {
+    display: flex !important;
+    justify-content: center;
+    align-items:center;
+    padding: 0 !important;
   }
+
+  .ant-upload-text {
+    margin-top: 0 !important;
+  }
+
   .ant-card {
     margin: 2vh 0;
   }
